tests/fixtures/pass/throw_result_err_propagate.sali
let fail(): Result(i32, bool) = {
  throw true
}

let main(): i32 = fail() ?? 42
