tests/fixtures/fail/throw_in_global.sali
let failure = throw true

let main(): i32 = 42
